[package]
name = "neurolink-rust"
version = "2.0.0"
edition = "2021"

[[bin]]
name = "neurolink"
path = "src/rust/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.40.0", features = ["full"] }

# Web framework
axum = { version = "0.7.0", features = ["multipart"] }
tower = "0.5.0"
tower-http = { version = "0.6.0", features = ["cors", "fs"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }
indicatif = "0.17"
console = "0.15"

# File handling
tempfile = "3.13"
walkdir = "2.5"

# Hashing
sha2 = "0.10"
hex = "0.4"

# HTTP client
reqwest = { version = "0.12", features = ["multipart", "stream", "json", "rustls-tls"], default-features = false }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Time
chrono = "0.4"

# File watching (for phase 2)
notify = "6.1"

# MIME types
mime_guess = "2.0"

# Compression
zstd = "0.13"

[dev-dependencies]
tokio-test = "0.4"
