[package]
name = "neurolinkrs"
version = "2.0.0"
edition = "2021"

[[bin]]
name = "neurolinkrs"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
axum = { version = "0.7.0", features = ["multipart"] }
tower = "0.5.0"
tower-http = { version = "0.6.0", features = ["cors", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
indicatif = "0.17"
console = "0.15"
tempfile = "3.13"
walkdir = "2.5"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.12", features = ["multipart", "stream", "json", "rustls-tls"], default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
anyhow = "1.0"
chrono = "0.4"
notify = "6.1"
mime_guess = "2.0"
zstd = "0.13"

[dev-dependencies]
tokio-test = "0.4"
